internal/testdata/sdk/error/fixtures/teapot_error.go
// Generated by Fern. Do not edit.

package api

import (
	json "encoding/json"
	core "github.com/fern-api/fern-go/internal/testdata/sdk/error/fixtures/core"
)

type TeapotError struct {
	*core.APIError
	Body []string
}

func (t *TeapotError) UnmarshalJSON(data []byte) error {
	var body []string
	if err := json.Unmarshal(data, &body); err != nil {
		return err
	}
	t.StatusCode = 418
	t.Body = body
	return nil
}

func (t *TeapotError) MarshalJSON() ([]byte, error) {
	return json.Marshal(t.Body)
}
